Sun Mar 13 09:37:13 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/Service_Object.cpp:
        * ace/Naming_Context.cpp:
        * performance-tests/UDP/udp_test.cpp:
        * performance-tests/SCTP/Options_Manager.cpp:
        * apps/gperf/src/Options.cpp:
        * apps/JAWS/clients/Blobby/Blob_Handler.cpp:
        * examples/Log_Msg/test_callback.cpp:
        * examples/IPC_SAP/FILE_SAP/client.cpp:
        * examples/Service_Configurator/IPC-tests/client/broadcast_client_test.cpp:
          Fixed compile warnings from incorrect use of ACE_TCHAR* type in
          printf in wchar builds.

Sat Mar 12 09:26:56 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
        * ace/config-linux.h:
          Disable clock_{get,set}time() for single thread build.

Fri Mar 11 20:07:05 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/config-openbsd.h:
          Attempted to fix warnings about wrong format for size_t type
          on OpenBSD same as this works on NetBSD. It appears that %u is
          too little for size_t, let's try %lu.

Fri Mar 11 16:30:16 UTC 2011  Olli Savia  <ops@iki.fi>

        * apps/JAWS/server/HTTP_Request.cpp:
          Fixed compile error due getpwnam_r() changes.

Fri Mar 11 12:24:43 UTC 2011  Olli Savia  <ops@iki.fi>

        * tests/OS_Test.cpp:
          Compile fix for platforms that lack pwd-functions.

Fri Mar 11 12:09:00 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_pwd.h:
        * ace/OS_NS_pwd.inl:
          Rewrote getpwnam_r(). Changed API to conform POSIX.
          Fixes Bug #3952.

        * ace/config-aix-5.x.h:
        * ace/config-cygwin32.h:
        * ace/config-freebsd.h:
        * ace/config-hpux-11.00.h:
        * ace/config-kfreebsd.h:
        * ace/config-linux.h:
        * ace/config-lynxos.h:
        * ace/config-netbsd.h:
        * ace/config-openbsd.h:
        * ace/config-openvms.h:
        * ace/config-rtems.h: