@@ -1,3 +1,8 @@
+Sun Mar 13 10:32:34 UTC 2011  Olli Savia  <ops@iki.fi>
+
+        * tests/OS_Test.cpp (test_getpwnam_r):
+          Handle case where getlogin() returns 0.
+
 Sun Mar 13 09:37:13 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>
 
         * ace/Service_Object.cpp:
